# poker-mccfr-server

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
examples/: plain_tcp_client.py
poker_mccfr/: __init__.py  cards.py  evaluator.py  game.py  mccfr.py  server.py
tests/: test_cards.py  test_evaluator.py  test_game.py  test_mccfr.py  test_server.py
